--- a/app/index.html
+++ b/app/index.html
@@ -52,7 +52,7 @@
     </div>
 
     <div class="container">
-        <stk-watchlist-panel></stk-watchlist-panel>
+        <div ng-view=""></div>
     </div>
 
     <div class="footer">
@@ -97,6 +97,8 @@
     <script src="scripts/app.js"></script>
     <script src="scripts/services/watchlist-service.js"></script>
     <script src="scripts/directives/stk-watchlist-panel.js"></script>
+    <script src="scripts/controllers/dashboard.js"></script>
+    <script src="scripts/controllers/watchlist.js"></script>
     <!-- endbuild -->
 </body>
 
